# arm_api2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTE.md  Changelog_KIT.md  LICENSE.md  README.md  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.trunk/: trunk.yaml
arm_api2/scripts/: pose_sender.py  trajectory_sender.py  trajectory_sender_v2.py
config/: default_kinematics.yaml  franka.yaml  franka_demo.yaml  franka_sim.yaml
config/abb/: abb_servo_sim.yaml  abb_sim.yaml
config/big_cell/: big_cell_servo_sim.yaml  big_cell_sim.yaml
config/franka/: franka_demo.yaml  franka_kinematics.yaml  franka_servo_sim.yaml  franka_sim.yaml
config/kinova/: kinova_servo_sim.yaml  kinova_sim.yaml
config/lerobot/: lerobot_kinematics.yaml  lerobot_servo_sim.yaml  lerobot_sim.yaml
config/piper/: piper_servo_sim.yaml  piper_sim.yaml
config/so_arm100/: so_arm100_config.yaml  so_arm100_kinematics.yaml  so_arm100_servo_sim.yaml  so_arm100_sim.yaml
config/ur/: ur1_servo_sim.yaml  ur1_sim.yaml  ur2_servo_sim.yaml  ur2_sim.yaml  ur_kinematics.yaml  ur_servo_sim.yaml  ur_sim.yaml
examples/scripts/: arm_commander.py  collision_object_service_client.py  joint_sender_action_client.py  joint_sender_action_client_async.py  pose_sender_action_client.py  pose_sender_action_client_async.py  servo_twist_sender.py  servo_watchdog.py  trajectory_sender_action_client.py  trajectory_sender_action_client_async.py
include/arm_api2/: arm_joy.hpp  moveit2_iface.hpp  moveit2_iface.hpp.bak  moveit2_simple_iface.hpp  utils.hpp
include/arm_api2/grippers/: gripper.hpp  robotiq_gripper.hpp
launch/: moveit2_iface.launch.py  moveit2_iface_desc.launch.py  moveit2_simple_iface.launch.py  so_arm100.launch.py  so_arm100_iface.launch.py
src/: arm_api2.cpp  arm_joy.cpp  arm_joy_node.cpp  moveit2_iface.cpp  moveit2_iface_node.cpp  moveit2_simple_iface.cpp  moveit2_simple_iface_node.cpp  servo_keyboard_input.cpp  utils.cpp
src/grippers/: robotiq_gripper.cpp
utils/: CS_C.csv  CS_C_easy.csv  CS_S.csv  CS_S_easy.csv  arm_api2.yml  copy_tmuxinator_config.sh  demo_rdsc.txt  demo_sem_rdsc.txt  move_group_demo.txt  move_group_sim.txt
utils/tmux_configs/: kinova_api2.yml  kinova_gui2.yml  ur_api2.yml  ur_gui2.yml
